Fixed hero-h1-title responsive problems and other minor layout issues

--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@
   --clr-white: 0, 0%, 100%;
 
   /*Font Size*/
-  --fs-900: 5rem;
+  --fs-900: clamp(5rem, 10vw + 1rem, 9.375rem);
   --fs-800: 3.5rem;
   --fs-700: 1.75rem;
   --fs-600: 1.5rem;
@@ -29,6 +29,7 @@
     --fs-800: 5rem;
     --fs-700: 2.5rem;
     --fs-600: 1.5rem;
+    --fs-500: 1.25rem;
     --fs-400: 1rem;
   }
 }
@@ -36,7 +37,6 @@
 @media (min-width: 1024px) {
   :root {
     /*Font Size*/
-    --fs-900: 9.375rem;
     --fs-800: 6.25rem;
     --fs-700: 3.5rem;
     --fs-600: 2rem;
@@ -187,13 +187,6 @@ for people that prefer not to see them */
   margin-inline: auto;
 }
 
-@media (min-width: 798px) and (max-width: 1024px) {
-  .container {
-    max-width: 80rem;
-    padding-inline: 10em;
-  }
-}
-
 .sr-only {
   border: 0 !important;
   clip: rect(1px, 1px, 1px, 1px) !important; /* 1 */
@@ -321,6 +314,13 @@ for people that prefer not to see them */
 .hero {
   margin-top: var(--fs-800);
   text-align: center;
+}
+
+@media (min-width: 1220px) {
+  .hero {
+    grid-template-columns: repeat(2, 1fr);
+    text-align: left;
+  }
 }
 
 /* ------------------- */
@@ -453,6 +453,15 @@ for people that prefer not to see them */
   border-radius: 50%;
   aspect-ratio: 1;
   text-decoration: none;
+  text-align: center;
+}
+
+@media (min-width: 798px) {
+  .btn-main {
+    width: 15rem;
+    font-size: 2rem;
+    padding: 0;
+  }
 }
 
 .btn-main::after {
